<resources>
    <string name="app_name">Boundless</string>

    //LoginActivity strings
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>

    //MenuActivity strings
    <string name="gpa_catcher">GPA Game</string>
    <string name="pixel">Pixel Game</string>
    <string name="rotate_tile">Tile Game</string>
    <string name="sign_out">Sign out</string>
    <string name="customization">Customization</string>
    <string name="stats">Statistics</string>
    <string name="achievement">Achievement</string>

    //Achievement strings
    <string name="pixel_achieve">Pixel Game Achievements</string>
    <string name="rotate_achieve">Rotate Tile Game Achievements</string>
    <string name="gpa_achieve">GPA Catcher Achievements</string>

    //Achievement Pixel strings
    <string name="pixel_achieve1">Achievement 1 Pixel</string>
    <string name="pixel_achieve2">Achievement 2 Pixel </string>
    <string name="pixel_achieve3">Achievement 3 Pixel </string>
    <string name="pixel_achieve_cross1">Achievement 1 Pixel Status</string>
    <string name="pixel_achieve_cross2">Achievement 2 Pixel Status</string>
    <string name="pixel_achieve_cross3">Achievement 3 Pixel Status</string>
    <string name="pixel_message1">Touch the pixels at least 50 times.</string>
    <string name="pixel_message2">Touch the pixels at least 200 times.</string>
    <string name="pixel_message3">Get the correct answer in less than 20 seconds.</string>

    //Achievement Rotate Tile strings
    <string name="rotate_achieve1">Achievement 1 Rotate</string>
    <string name="rotate_achieve2">Achievement 2 Rotate</string>
    <string name="rotate_achieve3">Achievement 3 Rotate</string>
    <string name="rotate_achieve_cross1">Achievement 1 Rotate Status</string>
    <string name="rotate_achieve_cross2">Achievement 2 Rotate Status</string>
    <string name="rotate_achieve_cross3">Achievement 3 Rotate Status</string>
    <string name="rotate_message1">Rotate the tiles at least 50 times.</string>
    <string name="rotate_message2">Rotate the tiles at least 200 times.</string>
    <string name="rotate_message3">Get the correct answer in less than 20 seconds.</string>

    //Achievement Rotate Tile strings
    <string name="gpa_achieve1">Achievement 1 GPA</string>
    <string name="gpa_achieve2">Achievement 2 GPA</string>
    <string name="gpa_achieve3">Achievement 3 GPA</string>
    <string name="gpa_achieve_cross1">Achievement 1 GPA Status</string>
    <string name="gpa_achieve_cross2">Achievement 2 GPA Status</string>
    <string name="gpa_achieve_cross3">Achievement 3 GPA Status</string>
    <string name="gpa_message1">Get a 4.0 GPA.</string>
    <string name="gpa_message2">Get a 3.0 GPA.</string>
    <string name="gpa_message3">Get a 0.0 GPA.</string>

    //Statistics Achievements
    <string name="your_stats">Your Statistics (While In-Game)</string>
    <string name="time_in_game">Total Time (seconds):</string>
    <string name="total_pts">Total Points:</string>
    <string name="tap_screen">Total Number of Taps on Screen</string>
    <string name="thank_you">Thanks for Playing!</string>

    //Customization strings
    <string name="back_to_menu">&lt;-</string>
    <string name="choose_music">Choose your music:</string>
    <string name="choose_background">Choose your background:</string>
    <string name="music_1">Music 1</string>
    <string name="music_2">Music 2</string>
    <string name="music_3">Music 3</string>
    <string name="background_1">Background 1</string>
    <string name="background_2">Background 2</string>
    <string name="background_3">Background 3</string>
    <string name="halloween">If you want&#8230;</string>
    <string name="halloween_theme">The Button of Happiness!</string>
    <string name="turn_off_theme">Or&#8230;</string>
    <string name="turn_off">Return back to normal</string>

    //For games:
    <string name="game_over">Game over!</string>
    <string name="exit_overlay">Click on this overlay to dismiss it</string>
    <string name="achieve">Your Achievements</string>
    <string name="Boundless">Boundless</string>
    <string name="Game">Game</string>
    <string name="my_inventory">my inventory</string>
    <string name="shop">shop</string>
    <string name="pause">Paused</string>
    <string name="pause_back_to_main">Back to Menu</string>
    <string name="pause_back_to_levels">Back to Levels</string>
    <string name="points">points:</string>

    //Shop Strings:
    <string name="clear">clear</string>
    <string name="shop_info">Choose a game to view and purchase consumable items.
        To access your inventory while in game, simply click the pause button at the top left corner of the game,
        then select the item you would like to use. Each shop item has a fixed price of 3 points.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
