<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AchievementsActivity">

    <ImageView
        android:id="@+id/gpa_achieve1"
        android:layout_width="95dp"
        android:layout_height="87dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/gpa_achieve1"
        android:clickable="true"
        android:onClick="showGpaDescription1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotate_achieve"
        app:layout_constraintVertical_bias="0.769"
        app:srcCompat="@drawable/medal" />

    <ImageView
        android:id="@+id/rotate_cross3"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:contentDescription="@string/rotate_achieve_cross3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotate_achieve3"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/red_cross" />

    <ImageView
        android:id="@+id/gpa_cross3"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/rotate_achieve_cross3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpa_achieve3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/red_cross" />

    <ImageView
        android:id="@+id/rotate_cross2"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:contentDescription="@string/rotate_achieve_cross2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotate_achieve2"
        app:layout_constraintVertical_bias="0.036"
        app:srcCompat="@drawable/red_cross" />

    <ImageView
        android:id="@+id/gpa_cross2"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:contentDescription="@string/gpa_achieve_cross2"
        android:clickable="true"
        android:onClick="showGpaDescription2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpa_achieve2"
        app:layout_constraintVertical_bias="0.333"
        app:srcCompat="@drawable/red_cross" />

    <ImageView
        android:id="@+id/rotate_cross1"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/rotate_achieve_cross1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pixel_achieve1"
        app:layout_constraintVertical_bias="0.481"
        app:srcCompat="@drawable/red_cross" />

    <ImageView
        android:id="@+id/gpa_cross1"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:contentDescription="@string/gpa_achieve_cross1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpa_achieve1"
        app:layout_constraintVertical_bias="0.36"
        app:srcCompat="@drawable/red_cross" />

    <ImageView
        android:id="@+id/rotate_achieve3"
        android:layout_width="95dp"
        android:layout_height="87dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/rotate_achieve3"
        android:clickable="true"
        android:onClick="showRotateDescription3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotate_achieve"
        app:layout_constraintVertical_bias="0.003"
        app:srcCompat="@drawable/medal" />

    <ImageView
        android:id="@+id/gpa_achieve3"
        android:layout_width="95dp"
        android:layout_height="87dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/gpa_achieve3"
        android:clickable="true"
        android:onClick="showGpaDescription3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotate_achieve"
        app:layout_constraintVertical_bias="0.773"
        app:srcCompat="@drawable/medal" />

    <ImageView
        android:id="@+id/rotate_achieve2"
        android:layout_width="95dp"
        android:layout_height="87dp"
        android:contentDescription="@string/pixel_achieve_cross2"
        android:clickable="true"
        android:onClick="showRotateDescription2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotate_achieve"
        app:layout_constraintVertical_bias="0.069"
        app:srcCompat="@drawable/medal" />

    <ImageView
        android:id="@+id/gpa_achieve2"
        android:layout_width="95dp"
        android:layout_height="87dp"
        android:contentDescription="@string/gpa_achieve2"
        android:clickable="true"
        android:onClick="showGpaDescription2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotate_achieve"
        app:layout_constraintVertical_bias="0.788"
        app:srcCompat="@drawable/medal" />

    <ImageView
        android:id="@+id/rotate_achieve1"
        android:layout_width="95dp"
        android:layout_height="87dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/rotate_achieve1"
        android:clickable="true"
        android:onClick="showRotateDescription1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotate_achieve"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/medal" />

    <ImageView
        android:id="@+id/pixel_cross1"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/pixel_achieve_cross1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pixel_achieve1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/red_cross" />

    <ImageView
        android:id="@+id/pixel_achieve3"
        android:layout_width="95dp"
        android:layout_height="87dp"
        android:contentDescription="@string/pixel_achieve3"
        android:clickable="true"
        android:onClick="showPixelDescription3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298"
        app:srcCompat="@drawable/medal" />

    <ImageView
        android:id="@+id/pixel_achieve2"
        android:layout_width="95dp"
        android:layout_height="87dp"
        android:clickable="true"
        android:contentDescription="@string/pixel_achieve2"
        android:onClick="showPixelDescription2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298"
        app:srcCompat="@drawable/medal" />

    <TextView
        android:id="@+id/gpa_achieve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gpa_achieve"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />

    <TextView
        android:id="@+id/rotate_achieve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rotate_achieve"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:onClick="backToStats"
        android:text="@string/back_to_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pixel_achieve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pixel_achieve"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

    <ImageView
        android:id="@+id/pixel_achieve1"
        android:layout_width="95dp"
        android:layout_height="87dp"
        android:contentDescription="@string/pixel_achieve1"
        android:clickable="true"
        android:onClick="showPixelDescription1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298"
        app:srcCompat="@drawable/medal" />

    <ImageView
        android:id="@+id/pixel_cross3"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/pixel_achieve_cross3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pixel_achieve3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/red_cross" />

    <ImageView
        android:id="@+id/pixel_cross2"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/pixel_achieve_cross2"
        app:layout_constraintBottom_toTopOf="@+id/rotate_achieve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pixel_achieve2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/red_cross" />


</androidx.constraintlayout.widget.ConstraintLayout>