<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:id="@+id/game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Game"
            android:onClick="shopGame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:id="@+id/pixel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pixel"
            android:onClick="shopPixel"
            app:layout_constraintStart_toEndOf="@+id/game"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate_tile"
            android:onClick="shopTile"
            app:layout_constraintStart_toEndOf="@+id/pixel"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/gpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpa_catcher"
            android:onClick="shopGpa"
            app:layout_constraintStart_toEndOf="@+id/tile"
            app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
            android:id="@+id/shop_scrollview"
            android:layout_width="match_parent"
            android:layout_height="460dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tile">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollview_linear_layout"
                android:orientation="vertical">

            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageButton
                        android:id="@+id/item1"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@android:drawable/btn_dialog" />

                <Button
                        android:id="@+id/item1_description"
                        android:layout_width="250dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/customization" />
            </TableRow>

            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageButton
                        android:id="@+id/item2"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@android:drawable/btn_dialog"/>

                <Button
                        android:id="@+id/item2_description"
                        android:layout_width="250dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/customization" />
            </TableRow>

            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageButton
                        android:id="@+id/item3"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@android:drawable/btn_dialog"/>

                <Button
                        android:id="@+id/item3_description"
                        android:layout_width="250dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/customization" />
            </TableRow>

            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageButton
                        android:id="@+id/item4"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@android:drawable/btn_dialog"/>

                <Button
                        android:id="@+id/item4_description"
                        android:layout_width="250dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/customization" />
            </TableRow>

            <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageButton
                        android:id="@+id/item5"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@android:drawable/btn_dialog"/>

                <Button
                        android:id="@+id/item5_description"
                        android:layout_width="250dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/customization" />

            </TableRow>



        </LinearLayout>
    </ScrollView>

    <TextView
            android:id="@+id/text_my_inventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/my_inventory"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/inventory_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop_scrollview" />

    <TextView
            android:id="@+id/point_remaining"
            android:layout_width="89dp"
            android:layout_height="43dp"
            android:text="@string/points"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backToMenu"
            app:layout_constraintTop_toBottomOf="@+id/inventory_view" />

    <Button
            android:id="@+id/backToMenu"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:text="@string/back_to_menu"
            android:onClick="backToMenu"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inventory_view" />


    <ScrollView
            android:id="@+id/inventory_view"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_my_inventory">

        <LinearLayout
                android:id="@+id/inventory_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>