<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:visibility="visible"
    tools:context=".PauseMenuActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="140dp"
        android:layout_weight="1"
        android:text="@string/pause"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:onClick="resume"
        android:scaleType="fitCenter"
        android:src="@drawable/pause_resume"
        app:layout_constraintBottom_toTopOf="@+id/pauseMenu_back_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <Button
        android:id="@+id/pauseMenu_back_menu"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_weight="1"
        android:background="#1ACEC9C9"
        android:onClick="backToMain"
        android:text="@string/pause_back_to_main"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <Button
        android:id="@+id/pauseMenu_back_levels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_weight="1"
        android:background="#1ACEC9C9"
        android:onClick="backToLevels"
        android:text="@string/pause_back_to_levels"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pauseMenu_back_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>